# kafka-intro-project

./: .gitignore  config.py  create_topic.sh  docker-compose.yml  kafka_client_example.py  log_crypto_market_data.py  pyproject.toml  readme.md  schemas.py  spark_stream_process_btc_price.py  start_spark_process_job.sh  system_logs_consumer.py  system_logs_generator.py
coin_market_cap_client/: client.py  currency_symbols.py  envs.py  host_urls.py  models.py
